syntax = "proto3";

package org.polarmeet.proto;

option java_multiple_files = true;
option java_package = "org.polarmeet.grpcdistributedserver.proto";
option java_outer_classname = "StreamingProto";

service StreamingService {
  // Changed to client streaming - multiple messages from client, single response from server
  rpc StreamData (stream StreamRequest) returns (StreamResponse) {}
}

message StreamRequest {
  string client_id = 1;
  string data = 2;
  int64 timestamp = 3;
}

message StreamResponse {
  bool success = 1;
  string message = 2;
  int32 total_messages_processed = 3;
}